Bug 164408 - crash (assert) when joining lines
Summary: crash (assert) when joining lines
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Other
: NOR crash
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 165578 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-06-18 22:43 UTC by Francesco Riosa
Modified: 2008-07-03 10:14 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Francesco Riosa 2008-06-18 22:43:56 UTC
Version:            (using Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.3.1 (Gentoo 4.3.1 p1.0) 
OS:                Other

When joining a random number of lines, _including_ the last one kate crash telling:

ASSERT: "m_textLine" in file kdelibs/kate/render/katelinelayout.cpp, line 68
Comment 1 FiNeX 2008-06-18 23:09:26 UTC
Confirmed using current trunk.
Comment 2 Dominik Haumann 2008-06-29 15:10:54 UTC
SVN commit 825816 by dhaumann:

fix joinLines crash. This might fix lots of other crashes, too, that crashed with

  ASSERT: "m_textLine" in file /home/emeric/kde/src/KDE/kdelibs/kate/render/katelinelayout.cpp, line 68

Hamish, please review!
CCMAIL: rodda@kde.org

BUG: 164408


 M  +4 -5      katelayoutcache.cpp  
 M  +1 -1      katelinelayout.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=825816
Comment 3 Dominik Haumann 2008-07-03 10:14:24 UTC
*** Bug 165578 has been marked as a duplicate of this bug. ***