fix joinLines crash. This might fix lots of other crashes, too, that crashed with

ASSERT: "m_textLine" in file /home/emeric/kde/src/KDE/kdelibs/kate/render/katelinelayout.cpp, line 68

Hamish, please review!
CCMAIL: rodda@kde.org

BUG: 164408

svn path=/trunk/KDE/kdelibs/kate/; revision=825816